--- a/kanatzarrobinaca/app/src/main/res/layout/activity_main.xml
+++ b/kanatzarrobinaca/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello World! and even more text to see if this thing works"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
