--- a/kanatzarrobinaca/app/src/main/res/layout/activity_main.xml
+++ b/kanatzarrobinaca/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,13 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
