--- a/kanatzarrobinaca/app/src/main/res/layout/activity_main.xml
+++ b/kanatzarrobinaca/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Submit"
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
