--- a/TemperatureConversion/app/src/main/res/layout/activity_main.xml
+++ b/TemperatureConversion/app/src/main/res/layout/activity_main.xml
@@ -64,4 +64,15 @@
         android:layout_below="@+id/CelView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/outputText"
+        android:layout_above="@+id/convertButton"
+        android:layout_marginBottom="39dp"
+        android:layout_alignRight="@+id/fahView"
+        android:layout_alignEnd="@+id/fahView"
+        android:layout_toRightOf="@+id/celText"
+        android:layout_toEndOf="@+id/celText" />
 </RelativeLayout>
