--- a/WordNumber/app/src/main/res/layout/activity_main.xml
+++ b/WordNumber/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,47 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.robinkanatzar.android.aca.wordnumber.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:id="@+id/numberEditView"
+        android:hint="e.g. one, two, three..."
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="92dp"
+        android:textColor="#000000"
+        android:textSize="24dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter a number 1-10 as a word, not an integer."
+        android:id="@+id/promptTextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="24dp"
+        android:textAlignment="center"
+        android:textColor="#000000"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Convert Number"
+        android:id="@+id/convertButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#000000"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/numberTextView"
+        android:layout_above="@+id/convertButton"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:textSize="24dp"
+        android:textColor="#000000"/>
 </RelativeLayout>
