--- a/MagicBall/app/src/main/res/layout/activity_main.xml
+++ b/MagicBall/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Get Random Message"
+        android:text="Ask the Magic 8 Ball"
         android:id="@+id/buttonRandomMessage"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
