--- a/Notetoself/app/src/main/res/layout/activity_main.xml
+++ b/Notetoself/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.robinkanatzar.android.aca.notetoself.MainActivity">
+    tools:context="com.robinkanatzar.android.aca.notetoself.MainActivity"
+    android:background="#f2ecdc">
 
     <ListView
         android:layout_width="wrap_content"
