--- a/Notetoself/app/src/main/res/layout/activity_settings.xml
+++ b/Notetoself/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.robinkanatzar.android.aca.notetoself.SettingsActivity">
+    tools:context="com.robinkanatzar.android.aca.notetoself.SettingsActivity"
+    android:background="#F2ECDC">
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,7 +18,8 @@
         android:text="@string/settings_title"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:textColor="#8C7735"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +28,8 @@
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:textColor="#8C7735"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -36,7 +39,8 @@
         android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:checked="false"/>
+        android:checked="false"
+        android:textColor="#8C7735"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,7 +50,8 @@
         android:layout_below="@+id/checkBoxSound"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="70dp"/>
+        android:layout_marginTop="70dp"
+        android:textColor="#8C7735"/>
 
     <RadioGroup
         android:layout_width="wrap_content"
@@ -60,18 +65,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rb_fast"
-            android:id="@+id/radioFast"/>
+            android:id="@+id/radioFast"
+            android:textColor="#8C7735"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rb_slow"
-            android:id="@+id/radioSlow"/>
+            android:id="@+id/radioSlow"
+            android:textColor="#8C7735"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rb_none"
-            android:id="@+id/radioNone"/>
+            android:id="@+id/radioNone"
+            android:textColor="#8C7735"/>
     </RadioGroup>
 </RelativeLayout>
