--- a/Notetoself/app/src/main/res/layout/dialog_new_note.xml
+++ b/Notetoself/app/src/main/res/layout/dialog_new_note.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:background="#F2ECDC">
 
     <EditText
         android:layout_width="wrap_content"
@@ -12,7 +13,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="35dp"
-        android:hint="@string/title_hint"/>
+        android:hint="@string/title_hint"
+        android:textColor="#8C7735"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -23,7 +25,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="35dp"
         android:hint="@string/description_hint"
-        android:inputType="textMultiLine"/>
+        android:inputType="textMultiLine"
+        android:textColor="#8C7735"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -33,7 +36,8 @@
         android:layout_below="@+id/editDescription"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="35dp"/>
+        android:layout_marginTop="35dp"
+        android:textColor="#8C7735"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -43,7 +47,8 @@
         android:layout_below="@+id/checkBoxIdea"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="35dp"/>
+        android:layout_marginTop="35dp"
+        android:textColor="#8C7735"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -53,7 +58,8 @@
         android:layout_below="@+id/checkBoxTodo"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="35dp"/>
+        android:layout_marginTop="35dp"
+        android:textColor="#8C7735"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -63,7 +69,9 @@
         android:layout_below="@+id/checkBoxImportant"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="35dp"/>
+        android:layout_marginTop="35dp"
+        android:textColor="#8C7735"
+        android:background="#FFDBD2B5"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -72,5 +80,7 @@
         android:id="@+id/btnOK"
         android:layout_alignTop="@+id/btnCancel"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:textColor="#8C7735"
+        android:background="#dbd2b5"/>
 </RelativeLayout>
