--- a/Notetoself/app/src/main/res/layout/dialog_show_note.xml
+++ b/Notetoself/app/src/main/res/layout/dialog_show_note.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:background="#F2ECDC">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -38,7 +39,8 @@
         android:text="Large Text"
         android:id="@+id/txtTitle"
         android:layout_below="@+id/imageViewImportant"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:textColor="#8C7735"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,7 +49,8 @@
         android:id="@+id/txtDescription"
         android:layout_below="@+id/txtTitle"
         android:layout_toRightOf="@+id/imageViewImportant"
-        android:layout_toEndOf="@+id/imageViewImportant"/>
+        android:layout_toEndOf="@+id/imageViewImportant"
+        android:textColor="#8C7735"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -56,5 +59,7 @@
         android:id="@+id/btnOK"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"/>
+        android:layout_marginBottom="33dp"
+        android:background="#FFDBD2B5"
+        android:textColor="#8C7735"/>
 </RelativeLayout>
