--- a/Notetoself/app/src/main/res/layout/listitem.xml
+++ b/Notetoself/app/src/main/res/layout/listitem.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="#F2ECDC">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -38,7 +39,8 @@
         android:id="@+id/txtTitle"
         android:layout_below="@+id/imageViewImportant"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:textColor="#8C7735"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,5 +49,6 @@
         android:id="@+id/txtDescription"
         android:layout_below="@+id/txtTitle"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:textColor="#8C7735"/>
 </RelativeLayout>
