--- a/Notetoself/app/src/main/res/layout/activity_settings.xml
+++ b/Notetoself/app/src/main/res/layout/activity_settings.xml
@@ -19,7 +19,7 @@
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,7 +29,7 @@
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:checked="false"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="70dp"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <RadioGroup
         android:layout_width="wrap_content"
@@ -66,20 +66,30 @@
             android:layout_height="wrap_content"
             android:text="@string/rb_fast"
             android:id="@+id/radioFast"
-            android:textColor="#8C7735"/>
+            android:textColor="#000000"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rb_slow"
             android:id="@+id/radioSlow"
-            android:textColor="#8C7735"/>
+            android:textColor="#000000"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rb_none"
             android:id="@+id/radioNone"
-            android:textColor="#8C7735"/>
+            android:textColor="#000000"/>
     </RadioGroup>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/imageView3"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/pineapple"
+        android:alpha="0.2"/>
 </RelativeLayout>
