--- a/Notetoself/app/src/main/res/layout/dialog_new_note.xml
+++ b/Notetoself/app/src/main/res/layout/dialog_new_note.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="35dp"
         android:hint="@string/title_hint"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
         android:layout_marginTop="35dp"
         android:hint="@string/description_hint"
         android:inputType="textMultiLine"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="35dp"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="35dp"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -59,19 +59,19 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="35dp"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cancel_button"
         android:id="@+id/btnCancel"
+        android:textColor="#FFFFFF"
+        android:background="#B72C25"
         android:layout_below="@+id/checkBoxImportant"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="35dp"
-        android:textColor="#8C7735"
-        android:background="#FFDBD2B5"/>
+        android:layout_marginTop="40dp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -81,6 +81,28 @@
         android:layout_alignTop="@+id/btnCancel"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="#8C7735"
-        android:background="#dbd2b5"/>
+        android:textColor="#FFFFFF"
+        android:background="#90A05C"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Picture"
+        android:id="@+id/buttonAddPic"
+        android:background="#F1A25F"
+        android:textColor="#FFFFFF"
+        android:layout_alignTop="@+id/btnOK"
+        android:layout_centerHorizontal="true"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/pineapple"
+        android:alpha="0.2"
+        android:layout_alignBottom="@+id/btnCancel"/>
+
 </RelativeLayout>
