--- a/Notetoself/app/src/main/res/layout/listitem.xml
+++ b/Notetoself/app/src/main/res/layout/listitem.xml
@@ -40,7 +40,7 @@
         android:layout_below="@+id/imageViewImportant"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,5 +50,5 @@
         android:layout_below="@+id/txtTitle"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#8C7735"/>
+        android:textColor="#000000"/>
 </RelativeLayout>
