--- a/Notetoself/app/src/main/res/values/colors.xml
+++ b/Notetoself/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F26633</color>
+    <color name="colorPrimary">#F1A25F</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#DBD2B5</color>
+    <color name="background">#F2ECDC</color>
 </resources>
