Note to self picture works, but does not persist yet

--- a/Notetoself/app/src/main/res/layout/dialog_new_note.xml
+++ b/Notetoself/app/src/main/res/layout/dialog_new_note.xml
@@ -105,4 +105,12 @@
         android:alpha="0.2"
         android:layout_alignBottom="@+id/btnCancel"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewPicConfirm"
+        android:src="@mipmap/ic_launcher"
+        android:layout_alignTop="@+id/checkBoxImportant"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
