--- a/Notetoself/app/src/main/res/layout/dialog_show_note.xml
+++ b/Notetoself/app/src/main/res/layout/dialog_show_note.xml
@@ -92,4 +92,12 @@
         android:layout_alignBottom="@+id/imageView4"
         android:layout_centerHorizontal="true"
         android:background="#DBD2B5"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewShowImage"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:adjustViewBounds="true"/>
 </RelativeLayout>
