--- a/Notetoself/app/src/main/res/menu/menu_main.xml
+++ b/Notetoself/app/src/main/res/menu/menu_main.xml
@@ -17,9 +17,10 @@
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       tools:context=".MainActivity">
+    <!--
     <item android:id="@+id/action_add_file" android:title="@string/action_add_file"
           android:orderInCategory="100"
-          android:showAsAction="ifRoom" />
+          android:showAsAction="ifRoom" />-->
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
           android:orderInCategory="100"
           android:showAsAction="never" />
