--- a/DatabsePracticeforTabou/app/src/main/res/layout/activity_main.xml
+++ b/DatabsePracticeforTabou/app/src/main/res/layout/activity_main.xml
@@ -6,78 +6,65 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editName"
-        android:hint="Type a name"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editAge"
-        android:hint="Type their age"
-        android:layout_below="@+id/editName"
-        android:layout_alignLeft="@+id/editName"
-        android:layout_alignStart="@+id/editName" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="INSERT"
-        android:id="@+id/btnInsert"
-        android:layout_below="@+id/editAge"
-        android:layout_toRightOf="@+id/editSearch"
-        android:layout_toEndOf="@+id/editSearch"
-        android:layout_marginTop="24dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DELETE"
-        android:id="@+id/btnDelete"
-        android:layout_above="@+id/btnSearch"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="40dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SELECT *"
-        android:id="@+id/btnSelect"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/editName"
-        android:layout_alignEnd="@+id/editName" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Search"
-        android:id="@+id/btnSearch"
-        android:layout_above="@+id/btnSelect"
-        android:layout_alignLeft="@+id/btnDelete"
-        android:layout_alignStart="@+id/btnDelete"
-        android:layout_marginBottom="32dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editSearch"
-        android:hint="name to search"
-        android:layout_alignBottom="@+id/btnSearch"
+        android:text="Main Word"
+        android:id="@+id/frenchWord"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"/>
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editDelete"
-        android:hint="name to delete"
-        android:layout_alignBottom="@+id/btnDelete"
+        android:text="Taboo1"
+        android:id="@+id/taboo1"
+        android:layout_below="@+id/frenchWord"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:focusableInTouchMode="true" />
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Taboo2"
+        android:id="@+id/taboo2"
+        android:layout_below="@+id/taboo1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Taboo3"
+        android:id="@+id/taboo3"
+        android:layout_below="@+id/taboo2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Taboo4"
+        android:id="@+id/taboo4"
+        android:layout_below="@+id/taboo3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Taboo5"
+        android:id="@+id/taboo5"
+        android:layout_below="@+id/taboo4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get New Word"
+        android:id="@+id/btnGetNewWord"
+        android:layout_below="@+id/taboo5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 </RelativeLayout>
